# 3d-opengl

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: aabb2d.h.6160EDBCDB57D59D.idx  affine-mat.h.87B991A3553DC817.idx  affine-post.h.63FCDE604209073A.idx  affine-pre.h.25F15434423B75D2.idx  affine.h.047988F1147A4999.idx  affine.h.A66D60072AD2960A.idx  affine2d.h.42AAF1F8E2D15B69.idx  bezier.h.7C6D47A53AE6B67F.idx  box.h.2C4323C0B116014E.idx  cam.h.CD35D77F04149BCC.idx  camera.h.2618C1E008E79AA0.idx  cglm.h.8DE20BBB03CD3DA9.idx  color.h.2171748C6DA101B3.idx  common.h.9E0D1D237FB8B34E.idx  curve.h.7D1FA114633E8D8C.idx  ease.h.BDBF9495887658DB.idx  euler.h.E2193FC07DDF5DDD.idx  euler_to_quat_rh.h.02EA290F00AE51F5.idx  frustum.h.0B565BCF5E3A279B.idx  glad.c.907B54584BDF12A2.idx  glad.h.F8C4847EAD283325.idx  glfw3.h.ED138C87B47B205A.idx  intrin.h.0747D07C7F31C441.idx  io.h.57F12706D0B925FE.idx  ivec2.h.071BB2734435E099.idx  ivec3.h.785071EDFB7AE4B2.idx  ivec4.h.57C17F652680E8BE.idx  macros.h.462C7A59F077F191.idx  main.c.8694A46CF896F4D2.idx  mat2.h.47008ADA56EAB893.idx  mat2.h.9C6C5FC735B7972A.idx  mat2x3.h.05D6960914F7C0ED.idx  mat2x4.h.F311D4044BE28941.idx  mat3.h.22EE6FDF339F3E65.idx  mat3.h.51AE2F3C33D81AB4.idx  mat3x2.h.8CC5064022091A8F.idx  mat3x4.h.164723B8E344C6FB.idx  (+29 more)
include/: camera.h  player.h  prop.h  render.h  shader.h  update.h  window.h
include/game/: object.h  octree.h  player.h  prop.h  update.h  vector.h
include/render/: camera.h  input.h  keyboard_input.h  models.h  render.h  shader.h  texture.h  window.h
source/: camera.c  camera.h  game_entry.c  keyboardInput.h  keyboard_input.c  macros.h  main.c  object.h  player.h  prop.c  prop.h  render.c  render.h  shader.c  shader.h  update.c  window.c  window.h
source/game/: object.c  octree.c  player.c  prop.c  update.c  vector.c
source/render/: camera.c  input.c  keyboard_input.c  models.c  render.c  shader.c  texture.c  window.c
source/shaders/: fLight.glsl  fMain.glsl  fOctree.glsl  fSkybox.glsl  fragment_shader.glsl  vLight.glsl  vMain.glsl  vOctree.glsl  vSkybox.glsl
(+3 files in other folders)
